Jackson Yaml Properties 互转